# zigit-web

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  Readme.md  deploy-gh.sh  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-and-deploy.yml  rust.yml
.nuxt/: app.config.mjs  nitro.json  nuxt.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/manifest/meta/: dev.json  fda23672-6586-4e51-a05a-a6d78aad0021.json
.nuxt/types/: app.config.d.ts  plugins.d.ts
.output/: nitro.json
docker/: Dockerfile.yew  docker-compose.yaml
docs/: CNAME  index.html  tailwind-3fdf60cfe92abf3.css  tailwind-963fa0925809d7b8.css  tailwind-b222487448dc12ad.css  tailwind-f6b4b65fee378f33.css  zigit-web-600e1c510b8e4265.js  zigit-web-600e1c510b8e4265_bg.wasm  zigit-web-7ef0de219b65e7ee.js  zigit-web-7ef0de219b65e7ee_bg.wasm  zigit-web-84ca718bf55b6b5f.js  zigit-web-84ca718bf55b6b5f_bg.wasm  zigit-web-a62d289192e826d0.js  zigit-web-a62d289192e826d0_bg.wasm  zigit-web-b5e6e9d196e65c0e.js  zigit-web-b5e6e9d196e65c0e_bg.wasm  zigit-web-d727aa295cc1b153.js  zigit-web-d727aa295cc1b153_bg.wasm  zigit-web-d96e78322ab5ef74.js  zigit-web-d96e78322ab5ef74_bg.wasm  zigit-web-deaecaa1fd8bf5f1.js  zigit-web-deaecaa1fd8bf5f1_bg.wasm  zigit-web-e7e308d9f3dea490.js  zigit-web-effb977259ce26c7.js  zigit-web-effb977259ce26c7_bg.wasm
public/: main.wasm
src/: lib.rs  main.rs
src/components/: HelloWorld.vue  mod.rs  nav_header.rs
src/models/: home_header.rs  mod.rs
src/pages/: home.rs
(+160 files in other folders)
