[package]
name = "zigit-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# If you need the Renderer(csr) for testing or examples, you should enable it in the dev-dependencies instead.
[dev-dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }


# [serve]
# # The address to serve on LAN.
# address = "127.0.0.1"
# # The address to serve on WAN.
# # address = "0.0.0.0"
# # The port to serve on.
# port = 8000
